# wordler

./: CMakeLists.txt  LICENSE.txt  README.md  app.js  app.wasm  index.html  style.css
.github/workflows/: deployment.yml  staging.yml
cmake/: alia-html.cmake  catch.cmake  cppcodec.cmake
src/: app.cpp  index.html  style.css
src/model/: codes.cpp  coloring.cpp  coloring.h  dictionaries.cpp  dictionaries.h  puzzle.cpp  puzzle.h
src/ui/: creation.cpp  rgb.cpp  rgb.h  solving.cpp  solving.h  utilities.cpp  utilities.h
src/wordler/model/: codes.cpp  codes.h  coloring.cpp  coloring.h  dictionaries.cpp  puzzle.cpp  puzzle.h
src/wordler/ui/: creation.cpp  creation.h  decoder.cpp  decoder.h  solving.cpp  utilities.cpp  utilities.h
staging/: app.js  app.wasm
tests/: codes.cpp
